# chessbox

./: README.md  maxwell.rosinstall  rosdep.yaml  stack.xml
chess_msgs/: CMakeLists.txt  manifest.xml  package.xml
chess_msgs/msg/: ChessBoard.msg  ChessPiece.msg
chess_perception/: CMakeLists.txt  README.md  package.xml
chess_perception/include/chess_perception/: board_finder.h  conversions.h  piece_finder.h  table_finder.h
chess_perception/src/: board_finder.cpp  chess_perception.cpp  piece_finder.cpp  table_finder.cpp
chess_player/: CMakeLists.txt  manifest.xml  nodelets.xml  notes  package.xml  play.launch  setup.py
chess_player/cfg/: Locator.cfg  PieceExtraction.cfg  PieceExtractionConfig.cfg
chess_player/include/: extract_pieces.h
chess_player/launch/: run-board-locator.launch  run-piece-locator.launch  setup-board-locator.launch  simple-arm-server.launch
chess_player/nodes/: chess_executive.py  festival_launcher.py  js_capture.py  tf_turnpike.py  tilt_head.py  tuck_arm.py
chess_player/src/: arm_utilities.py  chess_board_locator.cpp  chess_utilities.py  extract_pieces.cpp  head_utilities.py  tuck_arm.py
chess_player/src/chess_player/: arm_utilities.py  chess_utilities.py  grasp_utilities.py  head_utilities.py  moveit_utilities.py  robot_defs.py  sound_utilities.py  tf_utilities.py  tuck_arm.py
chess_player/test/: chess_test.py  test_object_insertion.py
chess_player/tests/: perception_tests.py
moveit_utils/: CMakeLists.txt  package.xml  setup.py
moveit_utils/src/moveit_utils/: arm_interface.py  geometry.py  grasping_interface.py  object_interface.py
