<package>
  <name>chess_player</name>
  <version>0.2.0</version>
  <description>
    Executive for AAAI Chess 2011.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/chess_player</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend> 
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>chess_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
