<package>
  <name>moveit_utils</name>
  <version>0.2.0</version>
  <description>
    MoveIt! utilities extracted from chessbox.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/moveit_utils</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
